# novaflow

./: .env  .eslintrc.json  .gitignore  .npmrc  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  readme_new.md  requirements.txt  tailwind.config.ts  tsconfig.json
api/: bun.lockb  package-lock.json  package.json  pyproject.toml
api/novaflow_api/: main.py  server.py
api/novaflow_api/models/: generate_request.py
api/novaflow_api/novaflow/: run.py
api/novaflow_api/novaflow/models/: cogvlm.py
api/novaflow_api/routes/: chat.py  generation_route.py
api/novaflow_api/schemas/: generate_request.py
api/novaflow_api/utils/: check_gpu_memory.py  logging_handler.py
app/: globals.css  layout.tsx  page.tsx
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
app/dashboard/: page.tsx
app/nodeeditor/: page.tsx
app/settings/: page.tsx
app/splashscreen/: page.tsx
backend/: pyproject.toml
components/: providers.tsx
components/NodeLayout/: index.tsx
components/auth/: AuthGuard.tsx
components/chat/: AttachmentMenu.tsx  ChatInput.tsx  ChatMessage.tsx
components/chat-ui/: ChatUI.tsx
components/dialogs/SettingsModal/: index.tsx
components/edges/: ButtonEdge.tsx
components/menus/: AttachmentMenu.tsx  UserMenu.tsx
components/nodes/: LMProviderNode.tsx  NodeBuilder.tsx  NormalNode.tsx  PositionLoggerNode.tsx  index.ts
components/pages/: nodeLayout.tsx
components/pages/nodes/: PositionLoggerNode.tsx
components/ui/: GradientButton.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  queuebar.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  switch.tsx  textarea.tsx  titlebar.tsx  toast.tsx  tooltip.tsx
components/ui/ChatTextArea/: index.tsx
components/ui/DynamicTextArea/: index.tsx
components/ui/GradientButton/: index.tsx
components/ui/TitleBar/: index.tsx
components/views/: Conversation.tsx  ConversationList.tsx  Help.tsx  NodeEditor.tsx  NodeLayout.tsx  Settings.tsx
components/views/nodes/: NormalNode.tsx  PositionLoggerNode.tsx  index.ts
frontend/: .eslintrc.json  README.md  bun.lockb  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/[locales]/: page.tsx
frontend/app/[locales]/auth/login/: page.tsx
frontend/app/[locales]/projects/: page.tsx
frontend/app/api/auth/: [...nextauth].ts
frontend/app/api/auth/signup/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/components/: ClientLayout.tsx  SplashScreen.tsx
frontend/components/flow/: FlowChart.tsx
frontend/components/ui/: GradientButton.tsx  form.tsx  input.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: main.rs
hooks/: useKaTeX.ts
lib/: agent.ts  exp_server.js  provider.ts  surrealProvider.tsx  utils.ts
lib/db/: conversation_db.ts  db.ts  index.ts  types.ts  user_db.ts
lib/tools/: vector_db.ts
server/: pyproject.toml
server/lib/: vector_db.py
server/models/: rag.py
src-tauri/: Cargo.toml  icon-origin.png~  tauri.conf.json
src-tauri/$APPDATA/db/: 000039.sst  000042.sst  000051.sst  000056.sst  IDENTITY  MANIFEST-000058  OPTIONS-000007
src-tauri/capabilities/: default.json
src-tauri/extension-runtime/: README.md  app.ts  bun.lockb  package-lock.json  package.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  cuda_setup.rs  lib.rs  main.rs
src-tauri/src/db/: chat_db.rs  conversation_db.rs  db.rs  mod.rs  user_db.rs
src-tauri/src/lib/llms/: llama3.rs
src-tauri/src/server/: mod.rs  state.rs
src-tauri/src/server/db/: db.rs
src-tauri/src/server/handlers/: not_found.rs
src-tauri/src/server/routes/: auth.rs  chat.rs  generate.rs  list_services.rs  mod.rs
src-tauri/src/utils/: img_converter.rs  mod.rs  tools.rs
src-tauri/src/utils/llms/: mod.rs  phi3_vision.rs  provider.rs
store/: auth-store.ts  conversation-store.ts  messages-store.ts  model-store.ts  node-store.ts  provider.ts
types/: chat.ts  conversation.ts  file.ts  message.ts  nodes.ts  provider.ts
utils/: createNodeComponent.tsx
