[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colpali-engine>=0.3.10",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.7",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.14.2",
    "typer>=0.16.0",
]
