[package]
name = "novaflow-app"
version = "1.0.1"
description = "Novaflow - A modular AI Agent"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.41.0", features = ["full", "macros", "rt-multi-thread"] }
candle-core = { git = "https://github.com/huggingface/candle.git", features = ["cuda"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git"}
toml = "0.8.19"
reqwest = "0.12.8"
anyhow = "1.0.91"
# all features except avif. for msrv
image = { version = "0.25.1", default-features = false, features = ['bmp', 'dds', 'exr', 'ff', 'gif', 'hdr', 'ico', 'jpeg', 'png', 'pnm', 'qoi', 'tga', 'tiff', 'webp'] }
axum = "0.7.7"
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
obfstr = "0.4.4"
muddy = "0.2.2"
tauri-plugin-fs = "2.0.3"
once_cell = "1.20.2"
async-trait = "0.1.83"
lazy_static = "1.5.0"
sysinfo = "0.32.0"
base64 = "0.22.1"
futures = "0.3.31"

[profile.dev]
opt-level = 0   # No optimization (faster builds)
debug = true    # Enables debugging information
lto = false     # Link Time Optimization disabled
incremental = true # Enables incremental compilation to speed up rebuilds
panic = 'unwind'  # Allow unwinding on panic (better for debugging)
codegen-units = 256 # Increase code generation parallelism
# rustflags = ["-Cdebuginfo=0", "-Zthreads=12"] # Better compile performance.

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
debug = false       # Disable debug information
incremental = false # Disable incremental compilation
# rustflags = ["-Cdebuginfo=0", "-Zthreads=12"] # Better compile performance.

